# ChangeLog for games-sports/bygfoot
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-sports/bygfoot/ChangeLog,v 1.24 2009/04/14 09:52:58 armin76 Exp $

  14 Apr 2009; Raúl Porcel <armin76@gentoo.org> bygfoot-2.3.1.ebuild:
  x86 stable wrt #265134

  06 Apr 2009; Thomas Anderson <gentoofan23@gentoo.org>
  bygfoot-2.3.1.ebuild:
  stable amd64, bug 265134

*bygfoot-2.3.1 (31 Jan 2009)

  31 Jan 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +bygfoot-2.3.1.ebuild:
  version bump

*bygfoot-2.3.0 (26 Nov 2008)

  26 Nov 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +bygfoot-2.3.0.ebuild:
  version bump

  24 Jul 2008; Raúl Porcel <armin76@gentoo.org> bygfoot-2.2.1.ebuild:
  x86 stable wrt #232770

  24 Jul 2008; Santiago M. Mola <coldwind@gentoo.org> bygfoot-2.2.1.ebuild:
  amd64 stable wrt bug #232770

*bygfoot-2.2.1 (29 May 2008)

  29 May 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +bygfoot-2.2.1.ebuild:
  version bump

*bygfoot-2.2.0 (29 Jun 2007)

  29 Jun 2007; Tristan Heaven <nyhm@gentoo.org> +bygfoot-2.2.0.ebuild:
  Version bump

  22 Feb 2007; Michael Sterrett <mr_bones_@gentoo.org>
  -bygfoot-1.9.3.ebuild, -bygfoot-1.9.4.ebuild, -bygfoot-1.9.5.ebuild,
  -bygfoot-1.9.6.ebuild, -bygfoot-2.0.0.ebuild:
  clean out old ebuilds

  12 Jan 2007; Tristan Heaven <nyhm@gentoo.org> bygfoot-2.0.1.ebuild:
  Fix locale install directory, bug #159645

*bygfoot-2.0.1 (12 Oct 2006)

  12 Oct 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +bygfoot-2.0.1.ebuild:
  version bump

*bygfoot-2.0.0 (06 Jun 2006)

  06 Jun 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +bygfoot-2.0.0.ebuild:
  version bump

*bygfoot-1.9.6 (14 May 2006)

  14 May 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +bygfoot-1.9.6.ebuild:
  version bump

  27 Apr 2006; Marien Zwart <marienz@gentoo.org> files/digest-bygfoot-1.8.2,
  files/digest-bygfoot-1.9.3, files/digest-bygfoot-1.9.4, Manifest:
  Fixing SHA256 digest, pass four
