@@ -1,6 +1,6 @@
 DIST bygfoot-2.2.1-source.tar.bz2 1126336 RMD160 b169256dc1b36d7fe9654f6126c711d76f11e6b2 SHA1 a125ed203de0d8c89a9c16cb796c56b0df6209c5 SHA256 7b9a4fadb66c75d1f2190a860475a4c7ce66d6b27b1991a96becf1f806b62feb
 DIST bygfoot-2.3.1.tar.bz2 1526922 RMD160 7e7a12055c0c71128267155f9c91f4a2dffd5cce SHA1 6c6c26e20f9190e7d4a01e67628d59a7f18d74a5 SHA256 1521bd29a7d9275bcb2627e809b5b763de66c02b614d75459469a57edbb23fc1
 EBUILD bygfoot-2.2.1.ebuild 1177 RMD160 e27186a90bec5df7d9bd08def5572f2c802615bc SHA1 1cd847aa7c6ce058ffafd3672754b7cfb2544d98 SHA256 0e79bbeb2e5f9e09c6e2f8552fea25ba7317477bb11412526004936c3db5aae0
-EBUILD bygfoot-2.3.1.ebuild 1165 RMD160 67410c3cd503d71c0295fe780c880167f08839d8 SHA1 c24fd58add5c62cf81e6ca27b7c65a3a4d1ad1cf SHA256 6a5c17ea2167e47299808854c92072e6c6586f5146af0b703b78106222183b98
-MISC ChangeLog 3364 RMD160 0b3c1d776c95f7ac35f6db41fc385452e685acce SHA1 200d482cbc63b5108be670369626847917a0e62d SHA256 82bd8ade2d2cf946f8969ce586544eedf6a8f1cf4241c81dd4f5ffd7a718426d
+EBUILD bygfoot-2.3.1.ebuild 1125 RMD160 becd3ab1d0cfd80b92ac7b60182419420adc6eb6 SHA1 a635caa24c284492d146aebee4ca07fcc67160ad SHA256 f22ae2e7661399dbcbe0ba6104a31ece5a6fca2c7c451508b2233a58804524e4
+MISC ChangeLog 3473 RMD160 107f3cff758787b4914a3e4ffdd6a0cb7295e2c4 SHA1 9adc1ce5308f2501909fa36c41959040643a1152 SHA256 3e5824fe2d11d5e95de443c32ad44c1506b672fa580db045e8020d4702034138
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
